# multi-mcp

./: .gitignore  CLAUDE.md  Dockerfile  FINDINGS-CC.md  FINDINGS-OC.md  Makefile  PHASE2-PLAN.md  README.md  TASK_10_VERIFICATION_REPORT.md  bmx_plus.py  conftest.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  runtime_check.py  start-server.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: bandit.yml  codeql.yml  dependency-review.yml  lintr.yml  super-linter.yml
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: concerns-app-layer.md  fix-app-layer.md  fix-retrieval-internals.md  fix-test-failures-phase08.md  knowledge-base.md  mcp-client-migration.md  phase7-deviations.md  verify-mcp-client-migration.md  (+1 more)
.serena/: project.yml
docs/: OPERATOR-RUNBOOK.md  PHASE2-SYNTHESIZED-PLAN.md  TODO.md  implementation-audit-final.md
msc/: README.md
tests/: e2e_test.py  k8s_test.py  lifecycle_test.py  test_adapters.py  test_alert_rescore_rate.py  test_alpha_query_modes.py  test_api_auth.py  test_audit_fixes.py  test_audit_integration.py  test_audit_logging.py  test_auth_coverage.py  test_background_tasks.py  test_bg_tasks.py  test_bmx_retriever.py  test_cache_manager.py  test_canary_pipeline.py  test_catalog_snapshot.py  test_cc_final_fixes.py  test_cli.py  test_cli_install_scan.py  test_concurrent_access.py  test_config_fixes.py  test_config_lifecycle.py  test_core_pipeline_wiring.py  test_core_stabilization.py  test_deferred_init.py  test_disconnect_prompt_resource.py  test_e2e_alert_rescore.py  test_e2e_production_config.py  test_e2e_routing_dispatch.py  test_e2e_rrf_called.py  test_e2e_session_isolation.py  test_fallback_ladder.py  test_file_retrieval_logger.py  test_health_endpoint.py  test_idle_timeout.py  test_input_sanitization.py  test_keyword_retriever.py  test_keyword_triggers.py  test_lifecycle_fixes.py  (+50 more)
(+113 files in other folders)
