[project]
name = "multi-mcp"
version = "1.0.0"
description = "A production-ready MCP proxy that aggregates multiple backend servers into one endpoint with lazy loading, per-tool filtering, and a unified YAML config."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "model-context-protocol", "proxy", "ai", "llm", "tools"]
dependencies = [
    "mcp>=1.27.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "tomli_w>=1.0.0",
    "starlette>=0.52.1",
    "uvicorn>=0.44.0",
    "httpx-sse",
    "anyio",
    "rich",
    "loguru",
]

[project.optional-dependencies]
test = [
    "langgraph",
    "langchain-openai",
    "langchain-mcp-adapters",
    "python-dotenv",
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::pydantic.warnings.PydanticDeprecatedSince20"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
